--- a/src/Module 2/Data Aggreation using Python/q1.ipynb
+++ b/src/Module 2/Data Aggreation using Python/q1.ipynb
@@ -10,6 +10,88 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Data:\n",
+      "  Region Month  Sales\n",
+      "0  North   Jan    200\n",
+      "1  South   Jan    150\n",
+      "2   East   Jan    100\n",
+      "3   West   Jan    180\n",
+      "4  North   Feb    220\n",
+      "5  South   Feb    170\n",
+      "6   East   Feb    120\n",
+      "7   West   Feb    160\n",
+      "\n",
+      "Total Sales: 1300\n",
+      "Average Sales: 162.5\n",
+      "Number of Entries: 8\n",
+      "Min Sales: 100\n",
+      "Max Sales: 220\n",
+      "\n",
+      "Total Sales by Region:\n",
+      "Region\n",
+      "East     220\n",
+      "North    420\n",
+      "South    320\n",
+      "West     340\n",
+      "Name: Sales, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Sample data: Monthly sales for different regions\n",
+    "data = {\n",
+    "    'Region': ['North', 'South', 'East', 'West', 'North', 'South', 'East', 'West'],\n",
+    "    'Month': ['Jan', 'Jan', 'Jan', 'Jan', 'Feb', 'Feb', 'Feb', 'Feb'],\n",
+    "    'Sales': [200, 150, 100, 180, 220, 170, 120, 160]\n",
+    "    }\n",
+    "\n",
+    "# Create a DataFrame\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Display the original data\n",
+    "print(\"Original Data:\")\n",
+    "print(df)\n",
+    "\n",
+    "# Aggregate: Total sales\n",
+    "total_sales = df['Sales'].sum()\n",
+    "print(\"\\nTotal Sales:\", total_sales)\n",
+    "\n",
+    "# Aggregate: Average sales\n",
+    "average_sales = df['Sales'].mean()\n",
+    "print(\"Average Sales:\", average_sales)\n",
+    "\n",
+    "# Aggregate: Count of entries\n",
+    "count_sales = df['Sales'].count()\n",
+    "print(\"Number of Entries:\", count_sales)\n",
+    "\n",
+    "# Aggregate: Minimum and Maximum sales\n",
+    "min_sales = df['Sales'].min()\n",
+    "max_sales = df['Sales'].max()\n",
+    "print(\"Min Sales:\", min_sales)\n",
+    "print(\"Max Sales:\", max_sales)\n",
+    "\n",
+    "# Group by Region and get total sales per region\n",
+    "sales_by_region = df.groupby('Region')['Sales'].sum()\n",
+    "print(\"\\nTotal Sales by Region:\")\n",
+    "print(sales_by_region)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -26,11 +108,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset:\n",
+      "   sales  profit  quantity\n",
+      "0    100      20         1\n",
+      "1    200      50         3\n",
+      "2    150      30         2\n",
+      "3    300      60         5\n",
+      "4    250      40         4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "import pandas as pd\n",
+    "\n",
+    "# Sample dataset\n",
+    "data = {\n",
+    "    'sales': [100, 200, 150, 300, 250],\n",
+    "    'profit': [20, 50, 30, 60, 40],\n",
+    "    'quantity': [1, 3, 2, 5, 4]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "print(\"Dataset:\")\n",
+    "print(df)\n"
    ]
   },
   {
@@ -48,17 +156,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset:\n",
+      "   sales  profit  quantity\n",
+      "0    100      20         1\n",
+      "1    200      50         3\n",
+      "2    150      30         2\n",
+      "3    300      60         5\n",
+      "4    250      40         4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "# Write your code from here\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Sample dataset\n",
+    "data = {\n",
+    "    'sales': [100, 200, 150, 300, 250],\n",
+    "    'profit': [20, 50, 30, 60, 40],\n",
+    "    'quantity': [1, 3, 2, 5, 4]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "print(\"Dataset:\")\n",
+    "print(df)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -72,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
