Your descriptive commit message

--- a/src/Module 2/Data Aggreation using Python/q4.ipynb
+++ b/src/Module 2/Data Aggreation using Python/q4.ipynb
@@ -23,11 +23,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   year region  sales\n",
+      "0  2021  North   1200\n",
+      "1  2021  South   1500\n",
+      "2  2022  North   1300\n",
+      "3  2022  South   1600\n",
+      "4  2023  North   1400\n",
+      "5  2023  South   1700\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "# Write your code from here\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Step 28: Acquire a dataset (simulated here)\n",
+    "data = {\n",
+    "    'date': ['2021-03-15', '2021-07-20', '2022-01-05', '2022-09-10', '2023-02-14', '2023-06-30'],\n",
+    "    'region': ['North', 'South', 'North', 'South', 'North', 'South'],\n",
+    "    'sales': [1200, 1500, 1300, 1600, 1400, 1700]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Step 29: Extract the year from the 'date' column\n",
+    "df['date'] = pd.to_datetime(df['date'])  # convert to datetime\n",
+    "df['year'] = df['date'].dt.year          # extract year\n",
+    "\n",
+    "# Step 30: Group by 'year' and 'region' and sum sales\n",
+    "sales_by_year_region = df.groupby(['year', 'region'])['sales'].sum().reset_index()\n",
+    "\n",
+    "print(sales_by_year_region)\n"
    ]
   },
   {
@@ -45,11 +78,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "customerid\n",
+      "103    700\n",
+      "105    700\n",
+      "101    600\n",
+      "102    250\n",
+      "104    250\n",
+      "Name: amount_spent, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "import pandas as pd\n",
+    "\n",
+    "# Simulated data (you can replace this with your own dataset)\n",
+    "df = pd.DataFrame({\n",
+    "    'CustomerID': [101, 102, 101, 103, 104, 102, 105, 103, 101, 105],\n",
+    "    'Amount Spent': [200, 150, 300, 400, 250, 100, 500, 300, 100, 200]\n",
+    "})\n",
+    "\n",
+    "# Clean column names: lowercase and replace spaces with underscores\n",
+    "df.columns = df.columns.str.lower().str.replace(' ', '_')\n",
+    "\n",
+    "# Group by customer and get top 5 by total amount spent\n",
+    "top_customers = df.groupby('customerid')['amount_spent'].sum().sort_values(ascending=False).head(5)\n",
+    "\n",
+    "print(top_customers)\n"
    ]
   },
   {
@@ -67,11 +128,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sales by Month (Ascending):\n",
+      "month\n",
+      "January     1100\n",
+      "February    1250\n",
+      "April       1400\n",
+      "March       1700\n",
+      "Name: sales, dtype: int64\n",
+      "\n",
+      "Month with Lowest Sales: January\n",
+      "Month with Highest Sales: March\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "# Write your code from here\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Step 34: Sample retail dataset\n",
+    "data = {\n",
+    "    'transaction_date': [\n",
+    "    '2023-01-15', '2023-01-20', '2023-02-10', '2023-02-25',\n",
+    "    '2023-03-05', '2023-03-18', '2023-04-01', '2023-04-22'\n",
+    "    ],\n",
+    "    'sales': [500, 600, 550, 700, 800, 900, 650, 750]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Convert 'transaction_date' to datetime\n",
+    "df['transaction_date'] = pd.to_datetime(df['transaction_date'])\n",
+    "\n",
+    "# Step 35: Extract month number or name from 'transaction_date'\n",
+    "df['month'] = df['transaction_date'].dt.month_name()  # Use .dt.month for month number\n",
+    "\n",
+    "# Step 36: Group by month and sum sales\n",
+    "monthly_sales = df.groupby('month')['sales'].sum()\n",
+    "\n",
+    "# Sort sales to find highest and lowest months\n",
+    "monthly_sales_sorted = monthly_sales.sort_values()\n",
+    "\n",
+    "print(\"Sales by Month (Ascending):\")\n",
+    "print(monthly_sales_sorted)\n",
+    "\n",
+    "print(\"\\nMonth with Lowest Sales:\", monthly_sales_sorted.index[0])\n",
+    "print(\"Month with Highest Sales:\", monthly_sales_sorted.index[-1])\n"
    ]
   }
  ],
@@ -91,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
