--- a/src/Module 2/Data Aggreation using Python/q2.ipynb
+++ b/src/Module 2/Data Aggreation using Python/q2.ipynb
@@ -10,101 +10,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (3922949680.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 7\u001b[0;36m\u001b[0m\n\u001b[0;31m    'sales': [100, 150, 200,]()\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Sample dataset\n",
+    "data = {\n",
+    "    'category': ['A', 'B', 'A', 'B', 'A', 'B'],\n",
+    "    'month': ['Jan', 'Jan', 'Feb', 'Feb', 'Mar', 'Mar'],\n",
+    "    'sales': [100, 150, 200,]()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,7 +61,24 @@
     }
    ],
    "source": [
-    "# Write your code from here"
+    "# Write your code from here\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Step 10: Load the dataset (sample data for demonstration)\n",
+    "data = {\n",
+    "    'region': ['North', 'South', 'East', 'West', 'North', 'South'],\n",
+    "    'sales': [1000, 1500, 800, 1200, 1100, 1300]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Step 11: Group by 'region'\n",
+    "grouped = df.groupby('region')\n",
+    "\n",
+    "# Step 12: Calculate total sales per region\n",
+    "total_sales_per_region = grouped['sales'].sum()\n",
+    "\n",
+    "print(total_sales_per_region)\n"
    ]
   },
   {
@@ -172,17 +115,17 @@
     "# Example dataset (you can replace this with your actual dataset)\n",
     "data = {\n",
     "    'region': ['North', 'South', 'East', 'West', 'North', 'East', 'West'],\n",
-    "        'sales': [250, 300, 150, 500, 400, 200, 600]\n",
-    "        }\n",
+    "    'sales': [250, 300, 150, 500, 400, 200, 600]\n",
+    "}\n",
     "\n",
-    "        # Create a DataFrame\n",
-    "        df = pd.DataFrame(data)\n",
+    "# Create a DataFrame\n",
+    "df = pd.DataFrame(data)\n",
     "\n",
-    "        # Group by 'region' and calculate total sales per region\n",
-    "        total_sales_per_region = df.groupby('region')['sales'].sum()\n",
+    "# Group by 'region' and calculate total sales per region\n",
+    "total_sales_per_region = df.groupby('region')['sales'].sum()\n",
     "\n",
-    "        # Display the result\n",
-    "        print(total_sales_per_region)\n"
+    "# Display the result\n",
+    "print(total_sales_per_region)\n"
    ]
   },
   {
@@ -204,13 +147,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code from here"
+    "import pandas as pd\n",
+    "\n",
+    "# Sample dataset\n",
+    "data = {\n",
+    "    'category': ['A', 'B', 'A', 'B', 'A', 'B'],\n",
+    "    'quantity': [5, 8, 10, 12, 15, 7]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Step 16: Group by 'category'\n",
+    "grouped = df.groupby('category')\n",
+    "\n",
+    "# Step 17: Apply multiple aggregation functions\n",
+    "aggregated = grouped['quantity'].agg(['sum', 'count'])\n",
+    "\n",
+    "print(aggregated)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -224,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
