--- a/src/Module 2/Data Aggreation using Python/q3.ipynb
+++ b/src/Module 2/Data Aggreation using Python/q3.ipynb
@@ -22,11 +22,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "category    A    B\n",
+      "year              \n",
+      "2021      100  150\n",
+      "2022      200  250\n",
+      "2023      300  350\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_3796/388460004.py:14: FutureWarning: The provided callable <function sum at 0x7fc648117be0> is currently using DataFrameGroupBy.sum. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"sum\" instead.\n",
+      "  pivot_table = pd.pivot_table(\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Sample DataFrame\n",
+    "data = {\n",
+    "    'year': [2021, 2021, 2022, 2022, 2023, 2023],\n",
+    "    'category': ['A', 'B', 'A', 'B', 'A', 'B'],\n",
+    "'sales': [100, 150, 200, 250, 300, 350]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Create pivot table\n",
+    "pivot_table = pd.pivot_table(\n",
+    "df,\n",
+    "index='year',\n",
+    "columns='category',\n",
+    "values='sales',\n",
+    "aggfunc=np.sum\n",
+    ")\n",
+    "\n",
+    "print(pivot_table)\n"
    ]
   },
   {
@@ -44,11 +85,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          mean       max    \n",
+      "category     A     B   A   B\n",
+      "month                       \n",
+      "Feb       40.0  45.0  40  45\n",
+      "Jan       20.0  35.0  20  35\n",
+      "Mar       60.0  55.0  60  55\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Sample DataFrame\n",
+    "data = {\n",
+    "    'month': ['Jan', 'Jan', 'Feb', 'Feb', 'Mar', 'Mar'],\n",
+    "    'category': ['A', 'B', 'A', 'B', 'A', 'B'],\n",
+    "'profit': [20, 35, 40, 45, 60, 55]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Create pivot table with multiple aggregations\n",
+    "pivot_table = pd.pivot_table(\n",
+    "df,\n",
+    "index='month',\n",
+    "columns='category',\n",
+    "values='profit',\n",
+    "aggfunc=['mean', 'max']\n",
+    ")\n",
+    "\n",
+    "print(pivot_table)\n"
    ]
   },
   {
@@ -66,11 +141,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          mean       max    \n",
+      "category     A     B   A   B\n",
+      "month                       \n",
+      "Feb       40.0  45.0  40  45\n",
+      "Jan       20.0  35.0  20  35\n",
+      "Mar       60.0  55.0  60  55\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Sample DataFrame\n",
+    "data = {\n",
+    "    'month': ['Jan', 'Jan', 'Feb', 'Feb', 'Mar', 'Mar'],\n",
+    "    'category': ['A', 'B', 'A', 'B', 'A', 'B'],\n",
+    "    'profit': [20, 35, 40, 45, 60, 55]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Create pivot table with multiple aggregations\n",
+    "pivot_table = pd.pivot_table(\n",
+    "df,\n",
+    "index='month',\n",
+    "columns='category',\n",
+    "values='profit',\n",
+    "aggfunc=['mean', 'max']\n",
+    ")\n",
+    "\n",
+    "print(pivot_table)\n"
    ]
   }
  ],
@@ -90,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
